# gambigames

./: CMakeLists.txt  CMakeLists.txt~  README.md
src/: main.c  telainicial.c~
src/lib/: telainicial.c
src/lib/include/: telainicial.h
