CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

project (gambigames)


file( GLOB LIB_SOURCES src/lib/*.c )
file( GLOB LIB_HEADERS src/include/*.h )


 
INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)
PKG_SEARCH_MODULE(SDL2MIXER REQUIRED SDL2_mixer)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)


ADD_EXECUTABLE(gambi src/main.c)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} )
add_library( Gambilib ${LIB_SOURCES} ${LIB_HEADERS} )
TARGET_LINK_LIBRARIES(Gambilib ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2MIXER_LIBRARIES} ${SDL2TTF_LIBRARIES}) 
TARGET_LINK_LIBRARIES(gambi ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2MIXER_LIBRARIES} ${SDL2TTF_LIBRARIES} Gambilib  )


